# dima-perf

./: .gitignore  BENCHMARK.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES.md  build-all.sh  cliff.toml
.cargo/: config.toml
.cursor/plans/: dima_tauri_ui_application_f73a1d01.plan.md
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: entropy.rs  kmer.rs
docs/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docs/src/: content.config.ts
docs/src/content/docs/: benchmarks.mdx  index.mdx
docs/src/content/docs/cli/: index.mdx
docs/src/content/docs/cli/advanced/: environment-variables.mdx  exit-codes.mdx  performance-tuning.mdx
docs/src/content/docs/cli/commands/: analyze.mdx  completions.mdx  view.mdx
docs/src/content/docs/cli/features/: hcs.mdx  metadata.mdx  validation.mdx
docs/src/content/docs/cli/io/: input-formats.mdx  output-formats.mdx
docs/src/content/docs/contributing/: architecture.mdx  development-setup.mdx  testing.mdx
docs/src/content/docs/desktop/: features.mdx  installation.mdx  overview.mdx
docs/src/content/docs/getting-started/: installation.mdx  quick-start.mdx
docs/src/content/docs/methodology/: diversity-motifs.mdx  overview.mdx  shannon-entropy.mdx  support-threshold.mdx
docs/src/content/docs/reference/: changelog.mdx  faq.mdx
docs/src/styles/: custom.css
examples/: sample.fasta
samples/: mers_spike_aa.fasta
src/: alphabet.rs  analysis.rs  binary.rs  columnar.rs  entropy.rs  help.rs  indexing.rs  io.rs  kmer.rs  lib.rs  main.rs  matrix.rs  models.rs  output.rs  perf.rs  simd_string.rs  zero_copy.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs  progress.rs  project.rs  state.rs
src-tauri/src/commands/: analyze.rs  export.rs  http_retry.rs  mod.rs  pdb.rs  project.rs  settings.rs  uniprot.rs  validate.rs
src-tauri/src/tests/: mod.rs
tests/: cli_integration.rs  snapshot_tests.rs
tests/snapshots/: snapshot_tests__analyze_toplevel.snap  snapshot_tests__first_position_schema.snap  snapshot_tests__identical_sequences.snap
ui/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
ui/src/: App.tsx  main.tsx
ui/src/__tests__/: colors.test.ts  filters.test.ts  hcs.test.ts  lttb.test.ts  utils.test.ts
ui/src/components/: ErrorBoundary.tsx  ToastContainer.tsx
ui/src/components/annotations/: AnnotationManager.tsx
ui/src/components/charts/: EntropyHeatmap.tsx  EntropyLineChart.tsx  HCSMap.tsx  MetadataPieChart.tsx  PDBViewer.tsx  PositionExplorer.tsx  VariantBarChart.tsx  VariantPieChart.tsx
ui/src/components/dashboard/: DashboardGrid.tsx  DashboardPanel.tsx  PanelToggle.tsx  VariantModal.tsx
ui/src/components/dialogs/: ConfirmationDialog.tsx  ImportDimaDialog.tsx  KeyboardShortcutsDialog.tsx
ui/src/components/export/: ExportDialog.tsx
ui/src/components/features/: FeatureCategoryChips.tsx  FeatureDetailCard.tsx  FeatureOverlapBadges.tsx  FeatureTooltipContent.tsx  FeatureTrack.tsx  FeatureTrackSVG.tsx  FeatureTrackViewer.tsx  UniProtStatusIndicator.tsx
ui/src/components/filters/: FilterPanel.tsx
ui/src/components/layout/: MainContent.tsx  Sidebar.tsx
ui/src/components/ui/: alert-dialog.tsx  aria-live.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  popover.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  slider.tsx  switch.tsx  tabs.tsx  tooltip.tsx
ui/src/components/views/: AboutView.tsx  ProjectsView.tsx  SettingsView.tsx  WelcomeView.tsx  WizardView.tsx
ui/src/components/wizard/: AnalyzingStep.tsx  ConfigureStep.tsx  InputStep.tsx  ResultsStep.tsx
ui/src/hooks/: useChartTheme.ts  useDebouncedHover.ts  useFeatureHighlight3D.ts  useFeatureMapping.ts  useFeatureOverlaps.ts
ui/src/lib/: colors.ts  dashboard-layout.ts  features.ts  filters.ts  hcs.ts  keyboard-shortcuts.ts  lttb.ts  tauri.ts  types.ts  utils.ts
ui/src/stores/: appStore.ts  featureStore.ts  filterStore.ts  projectStore.ts  settingsStore.ts  themeStore.ts  toastStore.ts
ui/src/styles/: globals.css
ui/src/types/: 3dmol.d.ts
