[workspace]
members = [".", "src-tauri"]
default-members = ["."]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.81"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "sync", "macros"] }
rand = "0.8"
bio = "1.4"

[package]
name = "dima"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors = ["Shan Tharanga <stwm2@student.london.ac.uk>"]
description = "DiMA - Diversity Motif Analyser: A native Rust library for analyzing k-mer diversity in FASTA sequences"

[lib]
name = "dima_lib"
path = "src/lib.rs"

[[bin]]
name = "dima"
path = "src/main.rs"

[dependencies]
needletail = "0.7"
rand.workspace = true
rayon = "1.7"
serde.workspace = true
serde_json.workspace = true
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4"
hashbrown = { version = "0.14", features = ["serde"] }
indicatif = "0.18"
memmap2 = "0.9.11"
wide = { version = "0.7", features = ["std"] }
libm = "0.2"
bincode = "1.3"
lz4_flex = "0.11.6"
zstd = "0.13"
bytemuck = { version = "1", features = ["derive"] }
csv = "1.3"
ctrlc = "3.4"
libc = "0.2"
crc32fast = "1.5.0"
thiserror = "2"
anyhow = "1"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-indicatif = "0.3"
clap-verbosity-flag = { version = "3", default-features = false, features = ["tracing"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1", features = ["json", "redactions"] }

[[bench]]
name = "entropy"
harness = false

[[bench]]
name = "kmer"
harness = false

# Optimized release profile — used by `cargo tauri build`
[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
