[package]
name = "dima-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DiMA Desktop - GUI application for Diversity Motif Analysis"
default-run = "dima-desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"

# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# DiMA core library
dima_lib = { path = "..", package = "dima" }

# Async and utilities
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
thiserror = "1"
base64 = "0.22"
rand = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
